--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@types/luxon": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.33.0",
@@ -23,6 +24,7 @@
     "cheerio": "1.0.0-rc.12",
     "commander": "^10.0.0",
     "discord.js": "^14.7.1",
+    "luxon": "^3.2.1",
     "sqlite3": "^5.1.4"
   }
 }
